# unity-launcher

./: README.md  meson.build
data/: meson.build  org.unity.launcher.gschema.xml
src/: launcher.css  meson.build  unity-app-entry.c  unity-app-entry.h  unity-app-list.c  unity-app-list.h  unity-launcher-defs.h  unity-launcher.c  unity-launcher.gresource.xml  unity-launcher.h  unity-launcher.ui
src/components/: meson.build  unity-dash-tile.c  unity-dash-tile.h  unity-desktop-actions.c  unity-desktop-actions.h  unity-dismiss.c  unity-dismiss.h  unity-launcher-tile.c  unity-launcher-tile.h  unity-pinned-apps.c  unity-pinned-apps.h  unity-tile.c  unity-tile.h
src/dash/: meson.build  unity-dash-apps.c  unity-dash-apps.h  unity-dash-apps.ui  unity-dash-grid-layout.c  unity-dash-grid-layout.h  unity-dash-search-controller.c  unity-dash-search-controller.h  unity-dash-search.c  unity-dash-search.h  unity-dash-search.ui  unity-dash.c  unity-dash.h  unity-dash.ui
src/dash/search/: meson.build  unity-search-app-results.c  unity-search-app-results.h  unity-search-app-results.ui  unity-search-provider.c  unity-search-provider.h  unity-search-result-rows.c  unity-search-result-rows.h  unity-search-result.c  unity-search-result.h  unity-search.c  unity-search.h
