project(
  'unity-launcher',
  'c',
  version: '26',
  meson_version: '>= 1.0',
  default_options: [
    'c_std=gnu11',
    'warning_level=2',
  ],
)

dep_gtk = dependency('gtk4', version: '>= 4.22')
dep_adw = dependency('libadwaita-1', version: '>= 1.8')
dep_gio = dependency('gio-2.0')
dep_gio_unix = dependency('gio-unix-2.0')
dep_graphene = dependency('graphene-1.0')
dep_wlclient = dependency('wayland-client')
dep_astal4 = dependency('astal-4-4.0')
dep_astalapps = dependency('astal-apps-0.1')
dep_astalwlr = dependency('astal-wlr-0.1')
